# TaskTableParser

./: CMakeLists.txt
include/: StringOperations.hpp  TableParser.hpp  Utility.hpp
src/: StringOperations.cpp  TableParser.cpp  main.cpp
